--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -23,10 +23,10 @@ jobs:
         run: ./build.sh
       
       - name: Compile CSS from SCSS files
-          uses: gha-utilities/sass-build@v0.4.7
+          uses: gha-utilities/sass-build
           with:
-              source: src/stylesheets
-              destination:  build/stylesheets
+            source: src/stylesheets
+            destination:  build/stylesheets
 
 
       - name: Upload static files as artifact
