--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.6.0
         with:
-          source: src/stylesheets
-          destination:  build/stylesheets
+          source: ./src/stylesheets
+          destination:  ./build/stylesheets
 
 
       - name: Upload static files as artifact
