--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "content"]
 	path = content
-	url = https://github.com/ronia-jakim/knmt-website-content.git
+  url = https://github.com/ronia-jakim/knmt-website-content.git
+	branch = main
