--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Commit and push the updated submodule
       run: |
         git add content  # Stage the updated submodule changes
-        git commit -m "Update submodule to latest" || echo "No changes to commit"
+        git commit -m "github action :: Update submodule content to latest" || echo "No changes to commit"
         git push https://$GITHUB_ACTOR:${{ secrets.A_PUSH_TOKEN }}@github.com/ronia-jakim/knmt-website.git
 
