--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -13,6 +13,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'  # Make sure submodules are fetched
+    
+    - name: Set Git user name and email
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
 
     - name: Checkout correct branch for Repo knmt-website
       run: |
