--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Push changes to Repo knmt website
       env:
-        TOKEN: ${{ secrets.A_PUSH_TOKEN }}  # Use the PAT stored in GitHub Secrets
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the PAT stored in GitHub Secrets
       run: |
         git remote set-url origin https://$GITHUB_ACTOR:${{ secrets.A_PUSH_TOKEN }}@github.com/ronia-jakim/knmt-website.git
         git push origin HEAD:main  # Push changes to the main branch (or your specific branch)
